--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Projeto 2D/ProjectSettings/EditorBuildSettings.asset
+Projeto 2D/UserSettings/EditorUserSettings.asset
