--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ crashlytics-build.properties
 
 Projeto 2D/ProjectSettings/EditorBuildSettings.asset
 Projeto 2D/UserSettings/EditorUserSettings.asset
+Projeto 2D/UserSettings/EditorUserSettings.asset
