--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 Projeto 2D/ProjectSettings/EditorBuildSettings.asset
 Projeto 2D/UserSettings/EditorUserSettings.asset
 Projeto 2D/UserSettings/EditorUserSettings.asset
+Projeto 2D/UserSettings/EditorUserSettings.asset
