--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ Projeto 2D/ProjectSettings/EditorBuildSettings.asset
 Projeto 2D/UserSettings/EditorUserSettings.asset
 Projeto 2D/UserSettings/EditorUserSettings.asset
 Projeto 2D/UserSettings/EditorUserSettings.asset
+
+!FMOD/**
