Update git ignore que não funciona

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ Projeto 2D/fmod_editor.log
 !FMOD/**
 Projeto 2D/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Projeto 2D/UserSettings/EditorUserSettings.asset
+Projeto 2D/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+Projeto 2D/fmod_editor.log
+Projeto 2D/UserSettings/EditorUserSettings.asset
